  and |vim.treesitter.query.parse()| calls significantly faster for large
  queries.
• Treesitter highlighting is now asynchronous. To force synchronous parsing,
  use `vim.g._ts_force_sync_parsing = true`.
• Treesitter folding is now calculated asynchronously.

PLUGINS

• EditorConfig
  • spelling_language property is now supported.

STARTUP

• |-es| ("script mode") disables shada by default.
• Nvim will fail if the |--listen| or |$NVIM_LISTEN_ADDRESS| address is
  invalid, instead of silently skipping an invalid address.

TERMINAL

• The |terminal| now understands the OSC 52 escape sequence to write to the
  system clipboard (copy). Querying with OSC 52 (paste) is not supported.
• |hl-StatusLineTerm| and |hl-StatusLineTermNC| define highlights for the
  status line in |terminal| windows.
• The terminal buffer now supports reflow (wrapped lines adapt when the buffer
  is resized horizontally). Note: Lines that are not visible and kept in
  'scrollback' are not reflown.
• The |terminal| now supports OSC 8 escape sequences and will display
  hyperlinks in supporting host terminals.
• The |terminal| now uses the actual cursor, rather than a "virtual" cursor.
  This means that escape codes sent by applications running in a terminal
  buffer can change the cursor shape and visibility. However, it also
  means that the |TermCursorNC| highlight group is no longer supported: an
  unfocused terminal window will have no cursor at all (so there is nothing to
  highlight).
• |jobstart()| gained the "term" flag.
• The |terminal| will send theme update notifications when 'background' is
  changed and DEC mode 2031 is enabled.
• The |terminal| has experimental support for the Kitty keyboard protocol
  (sometimes called "CSI u" key encoding). Only the "Disambiguate escape
  codes" mode is currently supported.

TREESITTER

• |LanguageTree:node_for_range()| gets anonymous and named nodes for a range
• |vim.treesitter.get_node()| now takes an option `include_anonymous`, default